--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,5 @@
 .cover__overlay {
-  background-image: url('../../../images/cover-trains.jpg');
+  background-image: url(../../../images/cover-trains.jpg);
   width: 100%;
   background-size: cover;
 }
