--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,4 +2,5 @@
   background-image: url(../../../images/cover-trains.jpg);
   width: 100%;
   background-size: cover;
+  background-position: center;
 }
