--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,6 +3,7 @@
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 2px;
-  color: #AAAAAA;
+  color: #AAA;
   margin: 0;
+  text-transform: uppercase;
 }
