--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,32 @@
 .cover__overlay {
-  background-image: url(../../../images/cover-trains.jpg);
-  width: 100%;
-  background-size: cover;
-  background-position: center;
+  background-color: rgba(42, 44, 47, 0.3);
+  max-width: 1184px;
+  min-height: 740px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+}
+  
+.cover__overlay:hover {
+  background-color: rgba(42, 44, 47, 0.8);
+  transition: linear 0.7s 0.1s;
+}
+  
+@media screen and (max-width: 1024px) {
+  .cover__overlay {
+    min-height: 640px;
+  }
+}
+  
+@media screen and (max-width: 720px) {
+  .cover__overlay {
+  min-height: 480px;
+  }
+}
+  
+@media screen and (max-width: 400px) {
+  .cover__overlay {
+  min-height: 200px;
+  }
 }
