--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -14,7 +14,6 @@
   font-size: 32px;
   line-height: 35px;
   max-width: 248px;
-  padding: 0 20px;
-  padding-bottom: 16px;
+  padding: 0 20px 16px;
   }
 }
