--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,9 +4,8 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 163%;
+  line-height: 26px;
   max-width: 690px;
-  min-height: 208px;
   padding-bottom: 33px;
 }
 
@@ -17,7 +16,7 @@
   }
 }
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 550px) {
   .intro__text {
     max-width: 100%;
   }
