--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
-  max-width: 100%;
+  max-width: 1280px;
   min-height: 100vh;
-  background-color: #2A2C2F;
+  margin: 0 auto;
   font-family: 'Inter', 'Calibri', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
