--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,6 +4,7 @@
   gap: 16px;
   max-width: calc(100% - 92px);
   padding-bottom: 92px;
+  padding-top: 92px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -23,10 +24,12 @@
     gap: 16px;
     padding-bottom: 88px;
     max-width: calc(100% - 48px);
+    padding-top: 88px;
+    padding-top: 64px;
   }
 }
   
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 425px) {
   .photo-grid {
     grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
     max-width: calc(100% - 32px);
