--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  width: 460px;
+  max-width: 460px;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
@@ -9,23 +9,22 @@
 
 @media screen and (max-width: 1024px) {
   .place__title {
-    width: 440px;
+    max-width: 440px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place__title {
-    width: 330px;
+    max-width: 330px;
     padding-right: 10px;
     font-size: 42px;
     line-height: 46px;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 660px) {
   .place__title {
-    width: 288px;
-    font-weight: 900;
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
     padding-bottom: 32px;
