--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,6 +5,7 @@
   width: calc(100% - 148px);
   max-width: 100%;
   align-items: center;
+  padding-bottom: 92px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -16,17 +17,21 @@
 @media screen and (max-width: 768px) {
   .places {
     width: calc(100% - 48px);
+    padding-bottom: 90px;
   }
 }
 
-@media screen and (max-width: 720px) {
+/*@media screen and (max-width: 660px) {
   .places {
     width: calc(100% - 32px);
+    padding-bottom: 64px;
   }
-}
+}*/
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 660px) {
   .places {
     width: 100%;
+    width: calc(100% - 32px);
+    padding-bottom: 64px;
   }
 }
