--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css);
-@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang_en.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
@@ -16,6 +16,7 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-info/intro__list-info.css);
+@import url(../blocks/intro/__wieght/intro__wieght.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/link/link.css);
@@ -28,7 +29,7 @@
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__description/place__description.css);
 @import url(../blocks/place/__image/place__image.css);
-@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
