--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -12,8 +12,7 @@
 
 @media screen and (max-width: 768px) {
   .intro {
-    max-width: 720px;
     margin: 0 auto;
-    max-width: calc(100% - 32px);
+    width: calc(100% - 32px);
   }
 }
