--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -21,10 +21,15 @@
   }
 }
 
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 668px) {
+  .places {
+    width: calc(100% - 32px);
+  }
+}
+
+@media screen and (max-width: 425px) {
   .places {
     width: 100%;
-    width: calc(100% - 32px);
     padding-bottom: 64px;
   }
 }
