--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,5 +1,13 @@
 .body {
   background-color: #2A2C2F;
-  max-width: 100%;
-  margin: 0;
+  max-width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
+  font-family: 'Inter', 'Calibri', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
