--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,21 +1,28 @@
 .cover {
   max-width: 1184px;
   margin: 0 auto;
-  background-image: url(../../../images/cover-trains.jpg);
+  background-image: url(../../images/cover-trains.jpg);
   width: 100%;
   background-size: cover;
   background-position: center;
+  margin-bottom: 92px;
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
     max-width: 1024px;
-    margin: 0;
   }
 }
-  
+
 @media screen and (max-width: 768px) {
   .cover {
     max-width: 100%;
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover {
+    margin: 0;
   }
 }
