--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,16 +4,15 @@
   padding-bottom: 24px;
   display: flex;
   justify-content: space-between;
-  padding-top: 92px;
 }
   
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .footer {
-    padding-top: 88px;
+    max-width: calc(100% - 48px);
   }
 }
   
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 550px) {
   .footer {
     margin: 0;
     max-width: 186px;
