--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,9 +5,14 @@
   line-height: 28px;
   color: #FFF;
   text-decoration: none;
+  margin-left: 18px;
 }
 
-@media screen and (max-width: 767px) {
+.header__lang-link:first-child {
+  margin: 0;
+}
+
+@media screen and (max-width: 720px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 20px;
