--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -12,12 +12,12 @@
   
 @media screen and (max-width: 768px) {
   .place__image {
-    width: 340px;
+    max-width: 340px;
     height: 340px;
   }
 }
   
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 560px) {
   .place__image {
     width: 100%;
     height: 320px;
